Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -85,12 +85,8 @@ p {
   margin: 1rem;
 }
 
-.intro {
-  padding-bottom: 2rem;
-}
-
 .useful_links {
-  padding-bottom: 0.1rem;
+  font-weight: bold;
   font-size: 1.7rem;
 }
 
